--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Raol Mukarrozi - Personal Portfolio",
+  "name": "Rz Developer - Personal Portfolio",
   "short_name": "Portfolio",
   "description": "Web developer skilled in HTML, CSS, JavaScript, Tailwind, Node.js, and Laravel",
   "start_url": "/",
