--- a/package.json
+++ b/package.json
@@ -39,16 +39,19 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@next/mdx": "^15.1.7",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.1.3",,
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "3.0.0",
     "embla-carousel-react": "8.5.1",
+    "fs": "^0.0.1-security",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
     "nodemailer": "^6.10.0",
+    "path": "^0.12.7",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
