--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@next/mdx": "^15.1.7",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.1.3",,
+    "axios": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
